2020-07-20  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.pks (struct_mapper): Use macro arguments to
	access AST nodes, instead of relying on the context.
	(struct_comparator): Likewise.
	(struct_constructor): Likewise.
	(struct_writer): Likewise.
	(struct_field_writer): Likewise.
	(handle_struct_field_constraints): Likewise.
	* libpoke/pkl-gen.c: Adapt accordingly.

2020-07-20  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/ras: Support arguments in RAS functions.

2020-07-20  Jose E. Marchesi  <jemarch@gnu.org>

	* HACKING (Calling compiled Poke from RAS): New section.

2020-07-20  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/ras: Support for the .call directive.

2020-07-20  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/ras: Use RAS_PUSH_ASM and RAS_POP_ASM instead of the
	PKL_GEN_ macros.
	* libpoke/pkl-gen.c (RAS_PUSH_ASM): Define.
	(RAS_POP_ASM): Likewise.

2020-07-20  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-tab.y (integral_struct): Accept any
	simple_type_specifier after struct.
	* libpoke/pkl-typify.c (pkl_typify1_ps_type_struct): Make sure the
	type associated with an integral struct is itself integral.
	* pickles/elf.pk (Elf64_RelInfo): Use Elf64_Xword as the integer
	type of the struct.
	* testsuite/poke.pkl/int-struct-type-diag-14.pk: New test.
	* testsuite/poke.pkl/int-struct-1.pk: Likewise.
	* testsuite/poke.pkl/int-struct-2.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.

2020-07-19  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/elf.pk (elf_stv_names): Define.
	(STT_NOTYPE): Likewise.
	(STT_OBJECT): Likewise.
	(STT_FUNC): Likewise.
	(STT_SECTION): Likewise.
	(STT_FILE): Likewise.
	(STT_COMMON): Likewise.
	(STT_TLS): Likewise.
	(STT_NUM): Likewise.
	(STT_LOOS): Likewise.
	(STT_GNU_IFUNC): Likewise.
	(STT_HIOS): Likewise.
	(STT_LOPROC): Likewise.
	(STT_HIPROC): Likewise.
	(elf_stt_names): Likewise.
	(elf_stb_names): Likewise.
	(Elf64_Sym): Pretty-printers for st_info and st_other.
	* TODO: Update.
