@@ -1,5 +1,15 @@
 2020-07-20  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* libpoke/pkl-gen.pks (array_mapper): Use macro arguments to
+	access AST nodes instead of relying on the context.
+	(array_valmapper): Likewise.
+	(array_writer): Likewise.
+	(array_bounder): Likewise.
+	(array_constructor): Likewise.
+	* libpoke/pkl-gen.c: Adjust accordingly.
+
+2020-07-20  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* libpoke/pkl-gen.pks (struct_mapper): Use macro arguments to
 	access AST nodes, instead of relying on the context.
 	(struct_comparator): Likewise.
